--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -14,6 +14,8 @@
 @import './addExperience';
 @import './addEducation';
 @import './notFoundPage';
+@import './comingSoon';
+@import './userProfile';
 
 
 
