--- a/src/styles/pages/_profile.scss
+++ b/src/styles/pages/_profile.scss
@@ -117,7 +117,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 0.8rem;
-      justify-content: flex-end;
+      justify-content: flex-start;
 
       .skill {
         display: flex;
@@ -198,7 +198,7 @@
       }
 
       .skills {
-        justify-content: center;
+        justify-content: flex-start;
         width: 100%;
       }
     }
